--- a/.gitignore
+++ b/.gitignore
@@ -46,12 +46,10 @@ ExportedObj/
 *.mdb
 *.opendb
 *.VC.db
-*.hlsl
-*.shader
 # Unity-specific files
-*.shader linguist-vendored
-*.cginc linguist-vendored
-*.hlsl linguist-vendored
+*.shader 
+*.cginc
+*.hlsl 
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
