--- a/.gitignore
+++ b/.gitignore
@@ -1,79 +1,43 @@
-# This .gitignore file should cover most common Unity project files that should not be tracked
-
-# =============== #
-# Unity generated #
-# =============== #
+# Unity generated
+[Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
-[Ll]ibrary/
 [Ll]ogs/
 [Uu]ser[Ss]ettings/
 
-# ===================================== #
-# Visual Studio / Rider / MonoDevelop / VSCode #
-# ===================================== #
+# VS/Rider/MD/Consulo generated
 [Ee]xported[Oo]bj/
 .vs/
-.vscode/
+.idea/
+.gradle/
+*.consulo/
+*.tmp
 *.user
 *.userprefs
-*.suo
-*.sln.docstates
+*.pidb
+*.booproj
+*.svd
+*.pdb
+*.mdb
+*.opendb
+*.VC.db
 
-# ============ #
-# OS generated #
-# ============ #
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-[Tt]humbs.db
-[Dd]esktop.ini
-
-# ============ #
-# Builds       #
-# ============ #
-*.apk
-*.unitypackage
-
-# ==================== #
-# Misc IDEs and editors #
-# ==================== #
-*.swp
-*.bak
-*.tmp
-*.tlog
-*.vsp
-*.vspx
-*.sap
-
-# ============== #
-# Unity specific #
-# ============== #
+# Unity3D generated file on crash reports
 sysinfo.txt
-*.stackdump
-# ============================================= #
-# GETTING RID OF shaderLab Files and HSML files #
-# ============================================= #
-*.shader
-*.shadergraph
-*.hlsl
-*.shadersubgraph
-*.mat
 
-# ============================== #
-# Various settings and caches    #
-# ============================== #
-[Tt]emp/
-[Ll]ibrary/
-[Ss]aved/
+# Builds
+*.apk
+*.aab
+*.app
 
-# Ignore all asset meta files in the AssetStoreTools folder
-/[Aa]ssets/[Aa]sset[Ss]tore[Tt]ools*/*.meta
+# Crashlytics generated file
+crashlytics-build.properties
 
-# But keep the AssetStoreTools folder itself
-![Aa]ssets/[Aa]sset[Ss]tore[Tt]ools/
+# Packed Addressables
+/[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
+
+# OS generated
+.DS_Store*
+._*
